# Computer-Graphics-Experiments

./: .gitignore  LICENSE  README.md  task.md
1-TriangleAndCircle/: Graphics.cpp  Graphics.h  Renderer.cpp  Renderer.h  Settings.h  Vector3.h  main.cpp  readme.md
2-StrokeAndLine/: Algorithm.cpp  Algorithm.h  Grid.cpp  Grid.h  Settings.h  UIComponents.cpp  UIComponents.h  main.cpp  readme.md
3-ScanLine/: Algorithm.cpp  Algorithm.h  Animator.hpp  Color.cpp  Color.h  Grid.cpp  Grid.h  Polygon.cpp  Polygon.h  Settings.h  UIComponents.cpp  main.cpp  readme.md
4-ClipAndCrop/: Algorithm.cpp  Algorithm.h  Animator.h  Grid.cpp  Grid.h  Polygon.cpp  Polygon.h  Rect.cpp  Rect.h  Settings.h  main.cpp  readme.md
5-2-ZBuffer/: CMakeLists.txt  graphics.cpp  graphics.h  main.cpp  shader.cpp  shader.h  shader.vs  space.cpp
5-2-ZBuffer/graphics/: cube.cpp  cube.h  tetrahedron.cpp
5-2-ZBuffer/shader/: shader.gs
5-ShaderAndZBuffer/: .gitignore  CMakeLists.txt  glad.c  main.cpp  shader.h  space.cpp  space.h
5-ShaderAndZBuffer/graphics/: cube.cpp  cube.h  sphere.cpp  tetrahedron.cpp  tetrahedron.h
5-ShaderAndZBuffer/shader/: phong.fs
6-BezierCurve/: Animator.cpp  Animator.hpp  B_Spline.cpp  B_Spline.h  BezierCurve.cpp  BezierCurve.h  Grid.cpp  Grid.h  MathUtils.h  Polygon.cpp  Polygon.h  Polyline.cpp  Polyline.h  Rect.cpp  Settings.h  main.cpp
7+8-HalfEdgeSturcture/: .clang-format  CMakeLists.txt  main.cpp  shader.h  space.h
7+8-HalfEdgeSturcture/graphics/: cube.cpp  graphics.cpp  graphics.h  offgraphic.h  sphere.h  tetrahedron.h
7+8-HalfEdgeSturcture/shader/: frame.gs  phong.fs  shader.gs  shader.vs
7+8-HalfEdgeSturcture/utils/: glfw_toolkit.cpp  glfw_toolkit.h  input_handler.h
7-HalfEdgeSturcture/: .gitignore  CMakeLists.txt  glfw_toolkit.cpp  glfw_toolkit.h  graphics.cpp  graphics.h  graphics_component.cpp  graphics_component.h  input_handler.cpp  input_handler.h  main.cpp  readme.md  shader.cpp  space.cpp  space.h
7-HalfEdgeSturcture/graphics/: cube.cpp  cube.h  graphics.cpp  graphics_component.cpp  offgraphic.cpp  offgraphic.h  sphere.cpp  sphere.h  tetrahedron.cpp  tetrahedron.h
7-HalfEdgeSturcture/shader/: frame.gs  shader.fs
7-HalfEdgeSturcture/utils/: input_handler.cpp  progress_bar.cpp  progress_bar.h
